--- a/style.css
+++ b/style.css
@@ -51,6 +51,12 @@ transition: background-color 0.3s;
 background-color: #45a049;
 }
 
+
+
+/* Thi is very important */
+
 .login-form input[type="submit"]:active {
-background-color: #3e8e41;
+background-color: #3e8e42;
 }
+
+
