--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ border-radius: 8px;
 box-shadow: inset 6px 6px 10px #cbced1, inset -6px -6px 10px #ffffff;
 background-color: #f0f0f0;
 outline: none;
+color: #333;
 }
 
 .login-form input[type="submit"] {
